@@ -32,6 +32,9 @@
 #'   pitch contour: 'autocor' = autocorrelation (~PRAAT), 'cep' = cepstral,
 #'   'spec' = spectral (~BaNa), 'dom' = lowest dominant frequency band ('' or
 #'   NULL = no pitch analysis)
+#' @param pitchManual manually corrected pitch contour - a numeric vector of any
+#'   length, but ideally as returned by \code{\link{pitch_app}} with the same
+#'   windowLength and step as in current call to analyze
 #' @param entropyThres pitch tracking is not performed for frames with Weiner
 #'   entropy above \code{entropyThres}, but other spectral descriptives are
 #'   still calculated
@@ -275,6 +278,7 @@ analyze = function(
   cutFreq = min(samplingRate / 2, max(7000, pitchCeiling * 2)),
   nFormants = 3,
   pitchMethods = c('autocor', 'spec', 'dom'),
+  pitchManual = NULL,
   entropyThres = 0.6,
   pitchFloor = 75,
   pitchCeiling = 3500,
@@ -853,6 +857,19 @@ analyze = function(
                                         smoothingThres = smoothingThres)
   }
 
+  ## Update results using manual pitch contour, if provided
+  if (!is.null(pitchManual)) {
+    # up/downsample pitchManual to the right length
+    pitchManual = upsamplePitchContour(pitch = pitchManual,
+                                       len = nrow(result),
+                                       plot = FALSE)
+    result = updateAnalyze(
+      result = result,
+      pitch_true = pitchManual,
+      spectrogram = s
+    )
+  }
+
   ## Having decided upon the pitch for each frame, we save certain measurements
   # only for voiced frames (with non-NA pitch)
   voiced_idx = which(!is.na(result$pitch))
@@ -952,6 +969,10 @@ analyze = function(
 #'
 #' @param myfolder full path to target folder
 #' @param verbose if TRUE, reports progress and estimated time left
+#' @param pitchManual normally the output of \code{\link{pitch_app}} with the
+#'   same windowLength and step as current call to analyzeFolder, with manually
+#'   corrected pitch contours: a dataframe with at least two columns: "file"
+#'   (w/o path, with extension) and "pitch" (character like "NA, 150, 175, NA")
 #' @inheritParams analyze
 #' @inheritParams spectrogram
 #' @inheritParams getLoudness
@@ -966,20 +987,33 @@ analyze = function(
 #' # http://cogsci.se/publications/anikin-persson_2017_nonlinguistic-vocs/260sounds_wav.zip
 #' # unzip them into a folder, say '~/Downloads/temp'
 #' myfolder = '~/Downloads/temp'  # 260 .wav files live here
-#' s = analyzeFolder(myfolder, verbose = TRUE)  # ~ 15-30 minutes!
+#' s = analyzeFolder(myfolder, verbose = TRUE)  # ~ 10-20 minutes!
+#' # s = write.csv(s, paste0(myfolder, '/temp.csv'))  # save a backup
 #'
-#' # Save spectrograms with pitch contours plus an html file for easy access
-#' a = analyzeFolder('~/Downloads/temp', savePlots = TRUE,
+#' # Check accuracy: import manually verified pitch values (our "key")
+#' # ?pitchManual   # "ground truth" of mean pitch per sound
+#' # ?pitchContour  # "ground truth" of complete pitch contours per sound
+#' files_manual = paste0(names(pitchManual), '.wav')
+#' idx = match(s$sound, files_manual)  # in case the order is wrong
+#' s$key = pitchManual[idx]
+#'
+#' # Compare manually verified mean pitch with the output of analyzeFolder:
+#' cor(s$key, s$pitch_median, use = 'pairwise.complete.obs')
+#' plot(s$key, s$pitch_median, log = 'xy')
+#' abline(a=0, b=1, col='red')
+#'
+#' # Re-running analyzeFolder with manually corrected contours gives correct
+#' pitch-related descriptives like amplVoiced and harmonics (NB: you get it "for
+#' free" when running pitch_app)
+#' s1 = analyzeFolder(myfolder, verbose = TRUE, pitchManual = s$key)
+#' plot(s$harmonics_median, s1$harmonics_median)
+#' abline(a=0, b=1, col='red')
+#'
+#' # Save spectrograms with pitch contours plus an html file for easy access # CHECK IF PITCHMANUAL PLOTTED CORRECTLY!
+#' s2 = analyzeFolder('~/Downloads/temp', savePlots = TRUE,
 #'   showLegend = TRUE,
 #'   width = 20, height = 12,
 #'   units = 'cm', res = 300)
-#'
-#' # Check accuracy: import manually verified pitch values (our "key")
-#' key = pitchManual  # a vector of 260 floats
-#' trial = s$pitch_median
-#' cor(key, trial, use = 'pairwise.complete.obs')
-#' plot(log(key), log(trial))
-#' abline(a=0, b=1, col='red')
 #' }
 analyzeFolder = function(myfolder,
                          htmlPlots = TRUE,
@@ -997,12 +1031,12 @@ analyzeFolder = function(myfolder,
                          cutFreq = 6000,
                          nFormants = 3,
                          pitchMethods = c('autocor', 'spec', 'dom'),
+                         pitchManual = NULL,
                          entropyThres = 0.6,
                          pitchFloor = 75,
                          pitchCeiling = 3500,
                          priorMean = 300,
                          priorSD = 6,
-                         priorPlot = FALSE,
                          nCands = 1,
                          minVoicedCands = NULL,
                          domThres = 0.1,
@@ -1035,7 +1069,6 @@ analyzeFolder = function(myfolder,
                          plot = FALSE,
                          showLegend = TRUE,
                          savePlots = FALSE,
-                         plotSpec = 'deprecated',
                          pitchPlot = list(
                            col = rgb(0, 0, 1, .75),
                            lwd = 3
