@@ -26,6 +26,7 @@
 #' @param samplingRate sampling rate used to convert time values to points (Hz)
 #' @param voiced,contourLabel graphical pars for plotting breathing contours
 #'   (see examples below)
+#' @param NA_to_zero if TRUE, all NAs are replaced with zero
 #' @param main,xlim,ylim plotting options
 #' @param ... other plotting options passed to \code{plot()}
 #' @export
@@ -83,6 +84,7 @@ getSmoothContour = function(anchors = data.frame(time = c(0, 1), value = c(0, 1)
                             samplingRate = 16000,
                             voiced = NULL,
                             contourLabel = NULL,
+                            NA_to_zero = TRUE,
                             ...) {
   anchors = reformatAnchors(anchors, normalizeTime = normalizeTime)
   if (is.list(anchors)) {
@@ -269,7 +271,8 @@ getSmoothContour = function(anchors = data.frame(time = c(0, 1), value = c(0, 1)
     par("mar" = op)  # restore original margin settings
   }
   # NA's may arise if the first anchor time > 0
-  if (nrow(anchors) > 0) smoothContour[is.na(smoothContour)] = 0
+  if (nrow(anchors) > 0 & NA_to_zero)
+    smoothContour[is.na(smoothContour)] = 0
   if (thisIsPitch)
     smoothContour = semitonesToHz(smoothContour)
   return(smoothContour)
