@@ -2,6 +2,7 @@
 
 MINOR:
   * pitch_app(): choose summary function
+  * analyze() and analyzeFolder() accept manually checked pitch contours as produced by pitch_app ("pitchManual" argument)
 
 
           CHANGES IN SOUNDGEN VERSION 1.5.1 [12-October-2019]
